--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -48,9 +48,11 @@ h3.title a {
 		padding: 10px 18px;
 		margin: 0 10px;
 		text-decoration: none;
-		background: $white;
+        
+		background: rgba($white,0.1);
 		color: $color_shark;
-		a {
+		
+        a {
 			@include font-rem(20);
 			text-decoration: none;
 			color: $color_shark;
