--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -10,8 +10,8 @@ pre.highlight {
 	border-radius: 4px;
 	pre {
 		position: relative;
-		margin: 0;
-		padding: 1em;
+		margin: 0 -240px 0 0;
+		width: 100%;
 	}
 	.lineno            { padding-right: 24px; color: lighten(#49483e,50);}
 	.hll               { background-color: #49483e}
